--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CaveLight</title>
 </head>
-<body>
-
+<body style="height:100vh; margin:0;">
 <script type="text/javascript" src="/CaveLight/vendors~main.bundle.js"></script><script type="text/javascript" src="/CaveLight/main.bundle.js"></script></body>
 </html>
